# cc-switch-cli

./: .gitignore  CHANGELOG.md  README.md  README_ZH.md  flake.nix  install.sh
src-tauri/: Cargo.toml
src-tauri/src/: app_config.rs  claude_mcp.rs  claude_plugin.rs  codex_config.rs  config.rs  gemini_config.rs  gemini_mcp.rs  hermes_config.rs  lib.rs  main.rs  openclaw_config.rs  opencode_config.rs  prompt_files.rs  provider.rs  settings.rs  store.rs  sync_policy.rs  test_support.rs  usage_script.rs
src-tauri/src/cli/: claude_temp_launch.rs  codex_temp_launch.rs  i18n.rs  mod.rs
src-tauri/src/cli/commands/: auth.rs  completions.rs  config_common.rs  daemon.rs  env.rs  failover.rs  hermes.rs  (+12 more)
src-tauri/src/commands/: workspace.rs
src-tauri/src/daemon/: logging.rs  mod.rs  paths.rs  pidfile.rs  restart.rs  supervisor.rs
src-tauri/src/database/: backup.rs  mod.rs  schema.rs  tests.rs
src-tauri/src/deeplink/: mod.rs  parser.rs  provider.rs
src-tauri/src/proxy/: body_filter.rs  cache_injector.rs  circuit_breaker.rs  error.rs  forwarder.rs  handler_context.rs  handlers.rs  http_client.rs  mod.rs  model_mapper.rs  provider_router.rs  response.rs  response_handler.rs  server.rs  session.rs  thinking_budget_rectifier.rs  thinking_optimizer.rs  thinking_rectifier.rs  types.rs
src-tauri/src/services/: auth.rs  codex_oauth.rs  config.rs  local_env_check.rs  mcp.rs  mod.rs  prompt.rs  proxy.rs  session_usage.rs  skill.rs  state_coordination.rs  subscription.rs  webdav.rs
src-tauri/src/session_manager/: mod.rs
src-tauri/tests/: app_config_load.rs  app_type_parse.rs  completions_command.rs  deeplink_import.rs  import_export_sync.rs  install_script.rs  mcp_commands.rs  openclaw_config.rs  opencode_provider.rs  prompt_commands.rs  provider_commands.rs  provider_service.rs  proxy_claude_forwarder_alignment.rs  proxy_claude_model_mapping.rs  proxy_claude_openai_chat.rs  proxy_claude_response_parity.rs  proxy_claude_streaming.rs  proxy_daemon.rs  proxy_multi_app_passthrough.rs  proxy_service.rs  proxy_takeover.rs  proxy_upstream_error_summary.rs  settings_current_provider.rs  settings_visible_apps.rs  skills_service.rs  stream_check_claude_openai_responses.rs  support.rs  support_home_isolation.rs  webdav_settings.rs  webdav_sync_service.rs  workspace_commands.rs
src-tauri/tests/proxy_claude_openai_chat/: error_cases.rs  helpers.rs  logging_cases.rs  transform_cases.rs
src-tauri/tests/proxy_claude_streaming/: error_cases.rs  helpers.rs  logging_cases.rs  success_cases.rs
src-tauri/updater/: minisign.pub
(+144 files in other folders)
