[package]
name = "cc-switch"
version = "5.2.1"
description = "All-in-One Assistant for Claude Code, Codex, Gemini, OpenCode & OpenClaw"
authors = ["Jason Young", "saladday"]
license = "MIT"
repository = "https://github.com/saladday/cc-switch-cli"
edition = "2021"
rust-version = "1.85.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "cc_switch_lib"
crate-type = ["rlib"]

[[bin]]
name = "cc-switch"
path = "src/main.rs"

[features]
default = []
test-hooks = []

[dependencies]
# Core dependencies
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1.0"
anyhow = "1.0"
once_cell = "1.21.3"
libc = "0.2"

# CLI dependencies
clap = { version = "4.5", features = ["derive", "cargo", "env", "wrap_help"] }
clap_complete = "4.5"
inquire = { version = "0.9", features = ["fuzzy"] }
console = "0.15"
comfy-table = "7.1"
colored = "2.1"
indicatif = "0.17"
env_logger = "0.11"
ratatui = "0.30"
crossterm = "0.29"

# File and path utilities
dirs = "5.0"
tempfile = "3"
which = "6.0"

# Serialization
toml = "0.8"
toml_edit = "0.22"
serde_yaml = "0.9"
base64 = "0.22"
indexmap = { version = "2", features = ["serde"] }
rusqlite = { version = "0.31", features = ["bundled", "backup"] }
rust_decimal = "1.33"
json5 = "0.4"
json-five = "0.3.1"

# Network and async
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json", "stream", "socks"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time", "sync", "signal"] }
futures = "0.3"
async-stream = "0.3"
bytes = "1.5"
axum = "0.7"
tower = "0.5"
tower-http = { version = "0.5", features = ["cors"] }
hyper = { version = "1.0", features = ["full"] }
uuid = { version = "1.11", features = ["v4"] }

# Utilities
regex = "1.10"
sha2 = "0.10"
minisign-verify = "0.2.4"
semver = "1.0"
flate2 = "1.0"
tar = "0.4"
rquickjs = { version = "0.8", features = ["array-buffer", "classes"] }
zip = "2.2"
url = "2.5"
edit = "0.1"
unicode-width = "0.1"
tachyonfx = "0.25"

[target.'cfg(target_os = "windows")'.dependencies]
winreg = "0.52"
self-replace = "1"

# Optimize release binary size to help reduce AppImage footprint
[profile.release]
codegen-units = 1
lto = "thin"
opt-level = "s"
panic = "abort"
strip = "symbols"

[dev-dependencies]
minisign = "0.9.1"
serial_test = "3"
tempfile = "3"
